--- a/app/globals.css
+++ b/app/globals.css
@@ -968,6 +968,7 @@
     --utility-gradient-glassneon-glass-neon-4: #231830;
     --utility-gradient-glassneon-glass-neon-5: #2a0d3b;
     --utility-gradient-glassneon-glass-neon-6: #1c0052;
+    --utility-gradient-glassneon-glass-neon-7: #270073;
 
     --utility-gradient-app-bg-radial-1: var(--background-quaternary);
     --utility-gradient-app-bg-radial-2: rgba(13, 18, 28, 0);
