--- a/app/globals.css
+++ b/app/globals.css
@@ -1135,6 +1135,22 @@
     background: var(--background-quaternary);
   }
 
+  html {
+    font-size: 16px;
+  }
+
+  @media (max-width: 1441px) {
+    html {
+      font-size: 14px;
+    }
+  }
+
+  @media (max-width: 1280px) {
+    html {
+      font-size: 13px;
+    }
+  }
+
   .custom-scroll-bar {
     --scrollbar-thumb: var(--foreground-senary);
   }
