--- a/app/globals.css
+++ b/app/globals.css
@@ -1225,10 +1225,18 @@
       );
     }
 
-		.card-hover-gradient {
+		/* .card-hover-gradient {
 			background: radial-gradient(54.31% 54.31% at 46.17% 104.31%, #460066 0%, rgba(70, 0, 102, 0) 100%), 
 			radial-gradient(33.14% 35.91% at 79.7% 35.51%, #001866 0%, rgba(0, 24, 102, 0) 100%),
 			radial-gradient(32.53% 32.53% at 19.85% 27.43%, #660058 0%, rgba(102, 0, 88, 0) 100%);
+		} */
+
+		.card-hover-gradient {
+			background: radial-gradient(54.31% 54.31% at 46.17% 104.31%, #7200A6 22%, rgba(114, 0, 166, 0) 100%), 
+			radial-gradient(33.14% 35.91% at 79.7% 35.51%, #0128A4 22%, rgba(1, 40, 164, 0) 100%),
+			radial-gradient(47.42% 51.38% at 93.08% 93.35%, #920144 22%, rgba(146, 1, 68, 0) 100%),
+			radial-gradient(33.81% 36.63% at 11.84% 68.78%, #017292 22%, rgba(1, 114, 146, 0) 100%),
+			radial-gradient(32.53% 32.53% at 19.85% 27.43%, #92017E 22%, rgba(146, 1, 126, 0) 100%);
 		}
 
 
