--- a/shared/features/markdown/markdown.css
+++ b/shared/features/markdown/markdown.css
@@ -67,7 +67,7 @@
   font-weight: 600;
   padding-bottom: 0.3em;
   font-size: 2em;
-  border-bottom: 1px solid #3d444db3;
+  /* border-bottom: 1px solid #3d444db3; */
 }
 
 .markdown-body mark {
@@ -272,7 +272,7 @@
   font-weight: 600;
   padding-bottom: 0.3em;
   font-size: 1.5em;
-  border-bottom: 1px solid #3d444db3;
+  /* border-bottom: 1px solid #3d444db3; */
 }
 
 .markdown-body h3 {
