--- a/app/globals.css
+++ b/app/globals.css
@@ -344,6 +344,7 @@
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --stack-background: rgba(255, 255, 255, 0.02);
 
     /* SHADCN MAPPING */
 
