--- a/app/globals.css
+++ b/app/globals.css
@@ -951,6 +951,10 @@
         var(--typography-quaternary);
     }
 
+    [class^="PostHogSurvey"] {
+      pointer-events: all !important;
+    }
+
 
     @keyframes shine {
       0% {
